--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Install packages
         run: yarn
 
+      - name: Run lint
+        run: yarn lint
+
       - name: Run format
         run: yarn format
 
