--- a/package.json
+++ b/package.json
@@ -1,20 +1,36 @@
 {
-  "name": "static-site-template",
+  "name": "usagizmo.com_2021",
   "version": "1.0.0",
-  "repository": "ssh://git@github.com/usagizmo/static-site-template.git",
+  "repository": "ssh://git@github.com/usagizmo/usagizmo.com_2021.git",
   "author": "usagizmo <usagizmo@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "prepare": "husky install",
     "format": "prettier --write .",
-    "dev:serve": "browser-sync public/ -w --startPath index.html",
-    "dev:format": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
-    "dev": "concurrently \"yarn dev:serve\" \"yarn dev:format\"",
+    "serve": "php -S localhost:3000 -t public/",
+    "dev": "browser-sync public/ -w --startPath index.html",
+    "lint": "eslint --cache **/*.js --fix & stylelint --cache **/*.css --fix",
     "deploy": "rsync -ahvu --delete --exclude=\".*\" public/ <SSH_HOST>:/var/www/html/"
   },
+  "lint-staged": {
+    "**/*.js": "eslint --cache --fix",
+    "**/*.css": "stylelint --cache --fix",
+    "*": "pretty-quick --staged"
+  },
   "devDependencies": {
-    "browser-sync": "^2.26.13",
+    "browser-sync": "^2.26.14",
     "concurrently": "^5.3.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "husky": "^5.1.3",
+    "lint-staged": "^10.5.4",
     "onchange": "^7.1.0",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "pretty-quick": "^3.1.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-prettier": "^8.0.2",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-prettier": "^1.2.0"
   }
 }
