--- a/package.json
+++ b/package.json
@@ -1,35 +1,47 @@
 {
-  "name": "usagizmo.com",
-  "version": "1.0.0",
-  "repository": "ssh://git@github.com/usagizmo/usagizmo.com.git",
-  "author": "usagizmo <usagizmo@gmail.com>",
-  "license": "MIT",
+  "name": "nextjs-template",
+  "version": "0.7.0",
+  "private": true,
   "scripts": {
     "prepare": "husky install",
-    "format": "prettier --write .",
-    "dev": "browser-sync public/ -w --startPath index.html",
-    "dev:ignore-css": "browser-sync public/ -w --ignore \"**/*.css\" --startPath index.html",
-    "lint": "eslint --cache **/*.js --fix & stylelint --cache **/*.css --fix"
+    "dev": "next dev",
+    "build:graphql": "pnpm generate",
+    "build:next": "next build",
+    "build": "pnpm build:graphql && pnpm build:next",
+    "start": "next start",
+    "lint": "next lint --dir src",
+    "format": "prettier --write ."
   },
-  "lint-staged": {
-    "**/*.js": "eslint --cache --fix",
-    "**/*.css": "stylelint --cache --fix",
-    "*": "pretty-quick --staged"
+  "dependencies": {
+    "classnames": "^2.3.1",
+    "next": "^12.0.4",
+    "next-themes": "^0.0.15",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "browser-sync": "^2.26.14",
-    "concurrently": "^5.3.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "husky": "^5.1.3",
-    "lint-staged": "^10.5.4",
-    "onchange": "^7.1.0",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "stylelint": "^13.12.0",
-    "stylelint-config-prettier": "^8.0.2",
-    "stylelint-config-standard": "^21.0.0",
-    "stylelint-prettier": "^1.2.0"
+    "@types/node": "^16.11.9",
+    "@types/react": "^17.0.36",
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "autoprefixer": "^10.4.0",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.23.0",
+    "eslint-config-next": "^12.0.4",
+    "eslint-config-prettier": "^8.3.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.2",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
+    "tailwindcss": "^2.2.19",
+    "tslib": "^2.3.1",
+    "typescript": "^4.5.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --cache",
+      "prettier --write"
+    ],
+    "*": "prettier --write --ignore-unknown"
   }
 }
